falta recuperar contraseña, unittest, arreglar registro

--- a/botilleria/templates/botilleria/index.html
+++ b/botilleria/templates/botilleria/index.html
@@ -18,6 +18,13 @@
 </head>
 <body>
 <header>
+      <div id="usuario">
+            <p class="login">
+                Bienvenido <b>{{request.user.username}}</b>!
+                <a href="/logout">Cerrar sesión</a>
+            </p>
+      
+          </div>
  <!-- NavBar -->
  <div class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -29,6 +36,8 @@
                       <li><a class="f-menu" href="/">INICIO</a></li>
                       <li><a class="f-menu" href="/productos">PRODUCTOS</a></li>
                       <li><a class="f-menu" href="/nosotros">NOSOTROS</a></li>
+                      <li><a class="f-menu" href="/registrar">¡REGISTRATE!</a></li>
+                      <li><a class="f-menu" href="/login">¡LOGEATE!</a></li>
                     </ul>
                </div>
           </div>
