--- a/botilleria/templates/botilleria/nosotros.html
+++ b/botilleria/templates/botilleria/nosotros.html
@@ -22,7 +22,13 @@
 </head>
 
 <body>
-
+        <div id="usuario">
+                <p class="login">
+                    Bienvenido <b>{{request.user.username}}</b>!
+                    <a href="/logout">Cerrar sesión</a>
+                </p>
+          
+              </div>
     <!-- NavBar -->
     <header class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -34,8 +40,10 @@
                 <div>
                     <ul>
                         <li><a class="f-menu" href="/">INICIO</a></li>
-                        <li><a class="f-menu" href="/productos">PRODUCTOS</a></li>
-                        <li><a class="f-menu" href="/nosotros">NOSOTROS</a></li>
+                      <li><a class="f-menu" href="/productos">PRODUCTOS</a></li>
+                      <li><a class="f-menu" href="/nosotros">NOSOTROS</a></li>
+                      <li><a class="f-menu" href="/registrar">¡REGISTRATE!</a></li>
+                      <li><a class="f-menu" href="/login">¡LOGEATE!</a></li>
                     </ul>
                 </div>
             </div>
