--- a/botilleria/static/css/nav.css
+++ b/botilleria/static/css/nav.css
@@ -13,6 +13,7 @@
 .f-menu{
     font-family: 'Special Elite', cursive;
     font-weight: bold; 
+    font-size: 20px;
 }
 #intro{
     margin-top: 20px;
