--- a/botilleria/templates/botilleria/nosotros.html
+++ b/botilleria/templates/botilleria/nosotros.html
@@ -22,13 +22,11 @@
 </head>
 
 <body>
-        <div id="usuario">
-                <p class="login">
-                    Bienvenido <b>{{request.user.username}}</b>!
-                    <a href="/logout">Cerrar sesión</a>
-                </p>
-          
-              </div>
+    {% if request.user.is_authenticated %}
+      <p class="color">Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
+  {% else %}
+      <p class="color"><a class="color" href="/registrar">¡REGISTRATE!</a> | <a class="color" href="/login">¡LOGEATE!</a></p>
+  {% endif %}
     <!-- NavBar -->
     <header class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -39,11 +37,9 @@
             <div>
                 <div>
                     <ul>
-                        <li><a class="f-menu" href="/">INICIO</a></li>
+                      <li><a class="f-menu" href="/">INICIO</a></li>
                       <li><a class="f-menu" href="/productos">PRODUCTOS</a></li>
                       <li><a class="f-menu" href="/nosotros">NOSOTROS</a></li>
-                      <li><a class="f-menu" href="/registrar">¡REGISTRATE!</a></li>
-                      <li><a class="f-menu" href="/login">¡LOGEATE!</a></li>
                     </ul>
                 </div>
             </div>
