--- a/botilleria/templates/registrar/password_change.html
+++ b/botilleria/templates/registrar/password_change.html
@@ -18,11 +18,12 @@
 </head>
 <body>
 <header>
-  {% if request.user.is_authenticated %}
-      <p class="color">Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
-  {% else %}
-      <p class="color"><a class="color" href="/registrar">¡REGISTRATE!</a> | <a class="color" href="/login">¡LOGEATE!</a></p>
-  {% endif %}
+   {% if request.user.is_authenticated %}
+      <p>Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
+   
+   {% else %}
+      <p><a href="/registrar">¡REGISTRATE!</a> | <a href="/login">¡LOGEATE!</a></p>
+   {% endif %}
  <!-- NavBar -->
  <div class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -50,51 +51,25 @@
  </div>
     
  <!--Contenido banner-->
- <header class="showcase">
-   <div class="container showcase-inner">
-      <h1 class="f-menu" >BIENVENIDO</h1>
-      <div id="formulario">
-         <h2 class="f-menu">¡Inicia sesión a nuestra página!</h2>
-
-         <form method="POST">
-          {% csrf_token %}
-          {% for field in login_form %}
-            <p>
-              {{field.label_tag}}
-              {{field}}
-
-              {% if field.help_text %}
-                <small style="color: grey;">{{field.help_text}}</small>
-              {% endif %}
-
-              {% for error in field.errors%}
-              <small style="color: red;">{{error}}</small>
-              {% endfor %}
-
-              {% if login_form.non_field_errors %}
-                <div style="color:red";>
-                  <p>{{login_form.non_field_errors}}</p>
-                </div>
-              {% endif %}
-            </p>
-          {% endfor %}
-          
-          <button class="btn" type="submit">Logueate</button>
-
-          <a class="color" href="password_reset/">Recuperar contraseña</a>
-
-        </form>
-     </div>
-   </div>
- </header>
 
 </main>
+<div id="contacto" class="formulario">
+<form method="POST" class="form-signin">{% csrf_token %}
+  <h1 class="h3 mb-3 font-weight-normal">Cambiar Contraseña</h1>
+    <input name="old_password" class="form-control" placeholder="Antigua Contraseña" type="password" id="id_old_password" required="true">
+    <input name="new_password1" class="form-control" placeholder="Nueva Contraseña" type="password" id="id_new_password1" required="true">
+    <input name="new_password2" class="form-control" placeholder="Confirmar Nueva Contraseña" type="password" id="id_new_password2" required="true">
 
-<footer class="footer">
-   <div class="footer-bottom">
-        &copy; santateresita.com | created by Romina Castillo 
-   </div>
-</footer>
+    {% for field in form %}
+      {% for error in field.errors %}
+        <p style="color: red">{{ error }}</p>
+      {% endfor %}
+    {% endfor %}
+
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Actualizar Contraseña</button>  
+</form>
+
+</div>
 
 </body>
 </html>
