--- a/botilleria/templates/registrar/password_reset_forms.html
+++ b/botilleria/templates/registrar/password_reset_forms.html
@@ -16,13 +16,45 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Patrick+Hand|Permanent+Marker|Special+Elite&display=swap" rel="stylesheet">   
 </head>
+
+<style type="text/css">
+  .form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+  }
+  .form-signin .checkbox {
+    font-weight: 400;
+  }
+  .form-signin .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .form-signin .form-control:focus {
+    z-index: 2;
+  }
+  .form-signin input[type="email"] {
+    margin-bottom: 10px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .h3{
+    text-align: center;
+  }
+</style>
+
 <body>
 <header>
-  {% if request.user.is_authenticated %}
-      <p class="color">Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
-  {% else %}
+   {% if request.user.is_authenticated %}
+      <p class="color">Bienvenido, {{request.user.username}} | <a  class="color" href="/logout">Cerrar sesión</a> </p> 
+   
+   {% else %}
       <p class="color"><a class="color" href="/registrar">¡REGISTRATE!</a> | <a class="color" href="/login">¡LOGEATE!</a></p>
-  {% endif %}
+   {% endif %}
  <!-- NavBar -->
  <div class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -50,51 +82,14 @@
  </div>
     
  <!--Contenido banner-->
- <header class="showcase">
-   <div class="container showcase-inner">
-      <h1 class="f-menu" >BIENVENIDO</h1>
-      <div id="formulario">
-         <h2 class="f-menu">¡Inicia sesión a nuestra página!</h2>
-
-         <form method="POST">
-          {% csrf_token %}
-          {% for field in login_form %}
-            <p>
-              {{field.label_tag}}
-              {{field}}
-
-              {% if field.help_text %}
-                <small style="color: grey;">{{field.help_text}}</small>
-              {% endif %}
-
-              {% for error in field.errors%}
-              <small style="color: red;">{{error}}</small>
-              {% endfor %}
-
-              {% if login_form.non_field_errors %}
-                <div style="color:red";>
-                  <p>{{login_form.non_field_errors}}</p>
-                </div>
-              {% endif %}
-            </p>
-          {% endfor %}
-          
-          <button class="btn" type="submit">Logueate</button>
-
-          <a class="color" href="password_reset/">Recuperar contraseña</a>
-
-        </form>
-     </div>
-   </div>
- </header>
 
 </main>
 
-<footer class="footer">
-   <div class="footer-bottom">
-        &copy; santateresita.com | created by Romina Castillo 
-   </div>
-</footer>
+<form method="POST" class="form-signin">{% csrf_token %}
+	<h1 class="f-menu">Cambiar Contraseña</h1>
+    <input name="email" class="form-control" placeholder="Correo electrónico" type="email" id="id_email" required="true">
+	<button class="btn btn-lg btn-primary btn-block" type="submit">Enviar Correo.</button>  
+</form>
 
 </body>
 </html>
