--- a/botilleria/static/css/style.css
+++ b/botilleria/static/css/style.css
@@ -16,3 +16,36 @@ body{
     background: url('../img/Fondo/xbar-hero.jpg.pagespeed.ic.hGUsHr4KTD.jpg');
     opacity: 0.7;
 }
+
+.color{
+    color: #ffffff;
+    font-family: 'Special Elite', cursive;
+    font-size: 18px;
+    text-align: right;
+}
+
+.color1{
+    color: #ffffff;
+    font-family: 'Special Elite', cursive;
+    font-size: 18px;
+}
+
+header .resaltado, header .actual a{
+    color: #fff;
+    font-weight: bold;
+    background: #dfddc79a;
+}
+
+header a:hover{
+    color: #fff;
+    font-weight: bold;
+    background-color: #bbbbbb;
+}
+
+header li,a,button{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 16px;
+    font: Arial;
+}
