--- a/botilleria/templates/botilleria/index.html
+++ b/botilleria/templates/botilleria/index.html
@@ -18,13 +18,11 @@
 </head>
 <body>
 <header>
-      <div id="usuario">
-            <p class="login">
-                Bienvenido <b>{{request.user.username}}</b>!
-                <a href="/logout">Cerrar sesión</a>
-            </p>
-      
-          </div>
+   {% if request.user.is_authenticated %}
+      <p class="color">Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
+  {% else %}
+      <p class="color"><a class="color" href="/registrar">¡REGISTRATE!</a> | <a class="color" href="/login">¡LOGEATE!</a></p>
+  {% endif %}
  <!-- NavBar -->
  <div class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -36,8 +34,6 @@
                       <li><a class="f-menu" href="/">INICIO</a></li>
                       <li><a class="f-menu" href="/productos">PRODUCTOS</a></li>
                       <li><a class="f-menu" href="/nosotros">NOSOTROS</a></li>
-                      <li><a class="f-menu" href="/registrar">¡REGISTRATE!</a></li>
-                      <li><a class="f-menu" href="/login">¡LOGEATE!</a></li>
                     </ul>
                </div>
           </div>
@@ -126,7 +122,7 @@
 
 <footer class="footer">
    <div class="footer-bottom">
-        &copy; santateresita.com | created by Manuel Verdugo Romina Castillo 
+        &copy; santateresita.com | created by Romina Castillo 
    </div>
 </footer>
 
