--- a/botilleria/templates/botilleria/productos.html
+++ b/botilleria/templates/botilleria/productos.html
@@ -16,13 +16,11 @@
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Patrick+Hand|Permanent+Marker|Special+Elite&display=swap" rel="stylesheet">   
 </head>
 <body>
-        <div id="usuario">
-                <p class="login">
-                    Bienvenido <b>{{request.user.username}}</b>!
-                    <a href="/logout">Cerrar sesión</a>
-                </p>
-          
-              </div>
+    {% if request.user.is_authenticated %}
+      <p class="color">Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
+  {% else %}
+      <p class="color"><a class="color" href="/registrar">¡REGISTRATE!</a> | <a class="color" href="/login">¡LOGEATE!</a></p>
+  {% endif %}
  <!-- NavBar -->
  <div class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -34,8 +32,6 @@
                         <li><a class="f-menu" href="/">INICIO</a></li>
                       <li><a class="f-menu" href="/productos">PRODUCTOS</a></li>
                       <li><a class="f-menu" href="/nosotros">NOSOTROS</a></li>
-                      <li><a class="f-menu" href="/registrar">¡REGISTRATE!</a></li>
-                      <li><a class="f-menu" href="/login">¡LOGEATE!</a></li>
                     </ul>
                </div>
           </div>
