--- a/botilleria/templates/registrar/password_reset_complete.html
+++ b/botilleria/templates/registrar/password_reset_complete.html
@@ -19,10 +19,10 @@
 <body>
 <header>
   {% if request.user.is_authenticated %}
-      <p class="color">Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
-  {% else %}
-      <p class="color"><a class="color" href="/registrar">¡REGISTRATE!</a> | <a class="color" href="/login">¡LOGEATE!</a></p>
-  {% endif %}
+  <p class="color">Bienvenido, {{request.user.username}} | <a href="/logout">Cerrar sesión</a> </p> 
+{% else %}
+  <p class="color"><a class="color" href="/registrar">¡REGISTRATE!</a> | <a class="color" href="/login">¡LOGEATE!</a></p>
+{% endif %}
  <!-- NavBar -->
  <div class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -50,51 +50,13 @@
  </div>
     
  <!--Contenido banner-->
- <header class="showcase">
-   <div class="container showcase-inner">
-      <h1 class="f-menu" >BIENVENIDO</h1>
-      <div id="formulario">
-         <h2 class="f-menu">¡Inicia sesión a nuestra página!</h2>
-
-         <form method="POST">
-          {% csrf_token %}
-          {% for field in login_form %}
-            <p>
-              {{field.label_tag}}
-              {{field}}
-
-              {% if field.help_text %}
-                <small style="color: grey;">{{field.help_text}}</small>
-              {% endif %}
-
-              {% for error in field.errors%}
-              <small style="color: red;">{{error}}</small>
-              {% endfor %}
-
-              {% if login_form.non_field_errors %}
-                <div style="color:red";>
-                  <p>{{login_form.non_field_errors}}</p>
-                </div>
-              {% endif %}
-            </p>
-          {% endfor %}
-          
-          <button class="btn" type="submit">Logueate</button>
-
-          <a class="color" href="password_reset/">Recuperar contraseña</a>
-
-        </form>
-     </div>
-   </div>
- </header>
 
 </main>
-
-<footer class="footer">
-   <div class="footer-bottom">
-        &copy; santateresita.com | created by Romina Castillo 
-   </div>
-</footer>
+<div class="container">
+	<div class="d-flex flex-column">
+		<p class="f-menu">Tu contraseña ha sido cambiada! Prueba <a href="/login">Loguearte</a> ahora.</p>
+	</div>
+</div>
 
 </body>
 </html>
